# Research-Recorder

./: README.md
Project/: CMakeLists.txt  CMakeLists.txt.user.73bb310  CMakeLists.txt.user.eb2572a  assets.qrc  cmyfiledialog.cpp  cmyfiledialog.h  filebrowser.cpp  filebrowser.h  filebrowser.ui  filecontroller.cpp  filecontroller.h  filecopyworker.cpp  filecopyworker.h  header.cpp  header.h  header.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  shareddefines.h  sql.sql  user.cpp  user.h  useradddialog.cpp  useradddialog.h  useradddialog.ui  userdatacontroller.cpp  userdatacontroller.h  usereditdialog.cpp  usereditdialog.h  usereditdialog.ui
